--- a/app/globals.css
+++ b/app/globals.css
@@ -5,3 +5,12 @@
 
   --font-inter: var(--font-inter);
 }
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+select:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0px 1000px #f5d6ab inset;
+  -webkit-text-fill-color: #000;
+  transition: background-color 9999s ease-in-out 0s;
+}
